# rust_api_temp

./: Cargo.toml  README.MD  application.toml
sereins_web/: Cargo.toml
sereins_web/src/: lib.rs  main.rs
sereins_web/src/apps/: mod.rs  resp.rs
sereins_web/src/apps/admin/: mod.rs
sereins_web/src/apps/admin/controller/: admin.rs  mod.rs  system_config.rs  user.rs
sereins_web/src/apps/admin/domain/: mod.rs
sereins_web/src/apps/admin/entities/: admin.rs  mod.rs
sereins_web/src/common/utils/: convert.rs
sereins_web/src/config/: database.rs  mod.rs  redis.rs  server.rs
sereins_web/src/initialize/: config.rs  mod.rs
sereins_web/src/router/: mod.rs
sereins_web/src/ws/: mod.rs
