[package]
name = "sereis_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 运行时
tokio = { version = "1",features=["full"]}

# web框架
axum = "0.6.4"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.1"

# 状态管理
state = "0.5.3"
log = "0.4.17"
env_logger = "0.10.0"
