[package]
name = "sereis_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 运行时
tokio = { version = "1",features=["full"]}

# web框架
axum = { version = "0.6.4", features = ["headers", "ws"] }
tower-http = { version = "0.4.0", features = ["cors"] }

# 数据库
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "chrono", "decimal"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.1"

# 状态管理
state = "0.5.3"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
